crates/harnx-tui/src/snapshots/harnx_tui__tests__meta_suffix_both_off.snap
---
source: crates/harnx-tui/src/tests.rs
expression: r4
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
> hello



















• Input
