crates/harnx-tui/src/snapshots/harnx_tui__tests__meta_suffix_ts_only.snap
---
source: crates/harnx-tui/src/tests.rs
expression: r3
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to complete.
> hello  12:34:56



















• Input
