crates/harnx-tui/src/snapshots/harnx_tui__tests__modal_confirm_delete_range.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to
complete.


             ┌───────────────────────────────┐
             │Delete entries 3–5? [y/N]      │
             └───────────────────────────────┘


• Input
