crates/harnx-tui/src/snapshots/harnx_tui__tests__modal_confirm_delete_single.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to
complete.


                ┌─────────────────────────┐
                │Delete entry 3? [y/N]    │
                └─────────────────────────┘


• Input
