crates/harnx-tui/src/snapshots/harnx_tui__tests__modal_confirm_rewind.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx 0.30.1  •  Type .help for commands, Tab to
complete.


               ┌────────────────────────────┐
               │Rewind to entry 7? [y/N]    │
               └────────────────────────────┘


• Input
