crates/harnx-tui/src/snapshots/harnx_tui__tests__mutation_notice_renders_with_yellow_dim_style.snap
---
source: crates/harnx-tui/src/tests.rs
expression: rendered
---
Welcome to harnx [VERSION]  •  Type .help for commands, Tab to complete.
✎ Edited entries 3-5



















• Input
